<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_register"
            android:textColor="#000000"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_email"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_nickname"
            android:layout_width="200dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_nickname"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/dict_btn_back"
            android:text="@string/register_login_btn"
            android:textColor="#333333"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>