<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_find_translate"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|left"
                    android:text="@string/find_translate" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#FF99D0" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_find_drama"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|left"
                    android:text="@string/find_drama" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#FF99D0" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_find_46"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|left"
                    android:text="@string/find_46" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#FF99D0" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_find_famous"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|left"
                    android:text="@string/find_famous" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#FF99D0" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_find_schedule"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|left"
                    android:text="@string/find_schedule" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#FF99D0" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_find_resouce"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|left"
                    android:text="@string/find_resource" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#FF99D0" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>