<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <ImageView
            android:id="@+id/iv_dict_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_dict_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_dict_cn"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_dict_cn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="#FFFFDD"
            android:textSize="15sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dict_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="word"
                android:textColor="#FF5722"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_dict_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="word"
                android:textSize="10sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/from_dict_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/dict_item_from"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_dict_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/from_dict_tv"
                android:gravity="center"
                android:text="哈哈"
                android:textColor="#FF5722"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_dict_46"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_below="@+id/from_dict_tv"
                android:gravity="center"
                android:text="大学英语六级"
                android:textSize="7sp" />

            <ImageView
                android:id="@+id/iv_dict_read"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_below="@+id/from_dict_tv"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_dict_46"
                android:scaleType="fitCenter"
                android:src="@drawable/read" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dict_read"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:gravity="center"
            android:text="@string/dict_item_read"
            android:textColor="#888888" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#888888" />

        <TextView
            android:id="@+id/tv_dict_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:gravity="center"
            android:text="@string/dict_item_view"
            android:textColor="#888888" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#888888" />

        <TextView
            android:id="@+id/tv_dict_add_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:gravity="center"
            android:text="@string/dict_item_add_new"
            android:textColor="#888888" />

    </LinearLayout>

</LinearLayout>